# docs/restapi/operations/auth/login_user_responses.go
@@ -1,0 +1,128 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// LoginUserOKCode is the HTTP code returned for type LoginUserOK
+const LoginUserOKCode int = 200
+
+/*LoginUserOK Login successful
+
+swagger:response loginUserOK
+*/
+type LoginUserOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *LoginUserOKBody `json:"body,omitempty"`
+}
+
+// NewLoginUserOK creates LoginUserOK with default headers values
+func NewLoginUserOK() *LoginUserOK {
+
+	return &LoginUserOK{}
+}
+
+// WithPayload adds the payload to the login user o k response
+func (o *LoginUserOK) WithPayload(payload *LoginUserOKBody) *LoginUserOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the login user o k response
+func (o *LoginUserOK) SetPayload(payload *LoginUserOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LoginUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// LoginUserBadRequestCode is the HTTP code returned for type LoginUserBadRequest
+const LoginUserBadRequestCode int = 400
+
+/*LoginUserBadRequest Incorrect password or invalid input
+
+swagger:response loginUserBadRequest
+*/
+type LoginUserBadRequest struct {
+}
+
+// NewLoginUserBadRequest creates LoginUserBadRequest with default headers values
+func NewLoginUserBadRequest() *LoginUserBadRequest {
+
+	return &LoginUserBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *LoginUserBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// LoginUserNotFoundCode is the HTTP code returned for type LoginUserNotFound
+const LoginUserNotFoundCode int = 404
+
+/*LoginUserNotFound Email not registered
+
+swagger:response loginUserNotFound
+*/
+type LoginUserNotFound struct {
+}
+
+// NewLoginUserNotFound creates LoginUserNotFound with default headers values
+func NewLoginUserNotFound() *LoginUserNotFound {
+
+	return &LoginUserNotFound{}
+}
+
+// WriteResponse to the client
+func (o *LoginUserNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// LoginUserUnprocessableEntityCode is the HTTP code returned for type LoginUserUnprocessableEntity
+const LoginUserUnprocessableEntityCode int = 422
+
+/*LoginUserUnprocessableEntity Missing required fields
+
+swagger:response loginUserUnprocessableEntity
+*/
+type LoginUserUnprocessableEntity struct {
+}
+
+// NewLoginUserUnprocessableEntity creates LoginUserUnprocessableEntity with default headers values
+func NewLoginUserUnprocessableEntity() *LoginUserUnprocessableEntity {
+
+	return &LoginUserUnprocessableEntity{}
+}
+
+// WriteResponse to the client
+func (o *LoginUserUnprocessableEntity) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(422)
+}
