# docs/restapi/operations/auth/post_login_responses.go
@@ -1,0 +1,128 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// PostLoginOKCode is the HTTP code returned for type PostLoginOK
+const PostLoginOKCode int = 200
+
+/*PostLoginOK Login successful
+
+swagger:response postLoginOK
+*/
+type PostLoginOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *PostLoginOKBody `json:"body,omitempty"`
+}
+
+// NewPostLoginOK creates PostLoginOK with default headers values
+func NewPostLoginOK() *PostLoginOK {
+
+	return &PostLoginOK{}
+}
+
+// WithPayload adds the payload to the post login o k response
+func (o *PostLoginOK) WithPayload(payload *PostLoginOKBody) *PostLoginOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post login o k response
+func (o *PostLoginOK) SetPayload(payload *PostLoginOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostLoginOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostLoginBadRequestCode is the HTTP code returned for type PostLoginBadRequest
+const PostLoginBadRequestCode int = 400
+
+/*PostLoginBadRequest Incorrect password or invalid input
+
+swagger:response postLoginBadRequest
+*/
+type PostLoginBadRequest struct {
+}
+
+// NewPostLoginBadRequest creates PostLoginBadRequest with default headers values
+func NewPostLoginBadRequest() *PostLoginBadRequest {
+
+	return &PostLoginBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *PostLoginBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// PostLoginNotFoundCode is the HTTP code returned for type PostLoginNotFound
+const PostLoginNotFoundCode int = 404
+
+/*PostLoginNotFound Email not registered
+
+swagger:response postLoginNotFound
+*/
+type PostLoginNotFound struct {
+}
+
+// NewPostLoginNotFound creates PostLoginNotFound with default headers values
+func NewPostLoginNotFound() *PostLoginNotFound {
+
+	return &PostLoginNotFound{}
+}
+
+// WriteResponse to the client
+func (o *PostLoginNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// PostLoginUnprocessableEntityCode is the HTTP code returned for type PostLoginUnprocessableEntity
+const PostLoginUnprocessableEntityCode int = 422
+
+/*PostLoginUnprocessableEntity Missing required fields
+
+swagger:response postLoginUnprocessableEntity
+*/
+type PostLoginUnprocessableEntity struct {
+}
+
+// NewPostLoginUnprocessableEntity creates PostLoginUnprocessableEntity with default headers values
+func NewPostLoginUnprocessableEntity() *PostLoginUnprocessableEntity {
+
+	return &PostLoginUnprocessableEntity{}
+}
+
+// WriteResponse to the client
+func (o *PostLoginUnprocessableEntity) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(422)
+}
